change validation rules for spaceship